--- a/Libraries/Libcomm/LibComm.vcproj
+++ b/Libraries/Libcomm/LibComm.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="LibComm"
 	ProjectGUID="{71894951-8BBE-4395-AE64-56F6966A7F82}"
 	RootNamespace="LibComm"
 	Keyword="MFCProj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
