--- a/Libraries/Libwin/LibWin.vcproj
+++ b/Libraries/Libwin/LibWin.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="LibWin"
 	ProjectGUID="{6F1A4B11-07E1-48B2-8D13-82FC02B70AE0}"
 	RootNamespace="LibWin"
 	Keyword="MFCProj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
